php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #79779 Assertion failure when assigning property of string offset by reference
Submitted: 2020-07-04 00:31 UTC Modified: 2020-07-07 08:24 UTC
From: changochen1 at gmail dot com Assigned: nikic (profile)
Status: Closed Package: Scripting Engine problem
PHP Version: 8.0Git-2020-07-04 (Git) OS:
Private report: No CVE-ID: None
 [2020-07-04 00:31 UTC] changochen1 at gmail dot com
Description:
------------
Log:
/home/yongheng/php_clean/Zend/zend_execute.c:1480: void zend_wrong_string_offset(zend_execute_data *): Assertion `0' failed.

Cmdline: php -f poc


Test script:
---------------
<?
trim ( 7  ) [ 1 ] -> a = & $b ;


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2020-07-07 08:24 UTC] nikic@php.net
-Summary: Assertion fail in zend_wrong_string_offset +Summary: Assertion failure when assigning property of string offset by reference -Assigned To: +Assigned To: nikic
 [2020-07-07 08:28 UTC] nikic@php.net
Automatic comment on behalf of nikita.ppv@gmail.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=6a9d934b2ccde3e10d9a6cdf5927b539a937f1b0
Log: Fixed bug #79779
 [2020-07-07 08:28 UTC] nikic@php.net
-Status: Assigned +Status: Closed
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Sep 16 03:00:02 2026 UTC