Fixed bug #79779

ASSIGN_OBJ_REF was not handling in zend_wrong_string_offset.